--- a/invessence/modules/web/src/main/webapp/forgot.xhtml
+++ b/invessence/modules/web/src/main/webapp/forgot.xhtml
@@ -16,8 +16,8 @@
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <div class="EmptyBox20"></div>
                     <h:form>
-                        <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                        <h:graphicImage id="logo" name="#{uiportal.logo}" styleClass="Fleft" library="invessence"
+                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                         <div class="EmptyBox15"></div>
                         <p:panel id="forgotID" styleClass="Container100" style="border:0px">
 
