--- a/invessence/modules/web/src/main/webapp/setPassword.xhtml
+++ b/invessence/modules/web/src/main/webapp/setPassword.xhtml
@@ -18,8 +18,8 @@
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <div class="EmptyBox20"></div>
                     <h:form>
-                        <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                        <h:graphicImage id="logo" name="#{uiportal.logo}" styleClass="Fleft" library="invessence"
+                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
 
                         <h:inputHidden value="#{userBean.beanUserID}" styleClass="Wid90"/>
                         <h:inputHidden id="resetCode" value="#{userBean.beanResetID}"/>
