--- a/invessence/modules/web/src/main/webapp/signupApproval.xhtml
+++ b/invessence/modules/web/src/main/webapp/signupApproval.xhtml
@@ -12,8 +12,8 @@
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form>
                         <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                        <h:graphicImage id="logo" name="#{uiportal.logo}" styleClass="Fleft" library="invessence"
+                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                         <div class="EmptyBox20"></div>
                         <div class="Container90">
                             <h1>You registration process is almost complete.</h1>
