--- a/ltam/modules/web/src/main/webapp/forgot.xhtml
+++ b/ltam/modules/web/src/main/webapp/forgot.xhtml
@@ -23,6 +23,13 @@
                             <p:panel id="p1" styleClass="Container100" style="border: 0px">
                                 <div class="Container100">
                                     <div class="ContainerIndent">
+                                        <h3>Enter your email address below, and we'll send
+                                            you the instruction to reset password.</h3>
+                                    </div>
+                                </div>
+                                <div class="EmptyBox10"></div>
+                                <div class="Container100">
+                                    <div class="ContainerIndent">
                                         <p:inputText id="email" styleClass="Container60 Fleft MarAuto Fs18"
                                                      value="#{userBean.beanEmail}" placeholder="Email"
                                                      required="true" requiredMessage="Please enter your email.">
