--- a/ltam/modules/web/src/main/webapp/signup.xhtml
+++ b/ltam/modules/web/src/main/webapp/signup.xhtml
@@ -52,11 +52,8 @@
                                                         hideEffect="fade" dynamic="false"
                                                         showCloseIcon="true"
                                                         style="width:350px; margin-left: 5px">
-                                            UserID must contain a minimum of 6 characters:
-                                            <ul>
-                                                <li>Only Alpha-Numeric characters</li>
-                                                <li>May contain these special characters [._-]</li>
-                                            </ul>
+                                            UserID must contain a minimum of 6 alpha characters and
+                                            may contain one of these special characters: '.' or '-'
                                         </p:overlayPanel>
 
                                     </div>
@@ -78,13 +75,13 @@
                                                         hideEffect="fade" dynamic="false"
                                                         showCloseIcon="true"
                                                         style="width:350px; margin-left: 5px">
-                                            Password Must contain a minimum of 8 Characters including at least:
+                                            Password must contain a minimum of 8 characters including at least:
                                             <ul>
                                                 <li>1 uppercase letter</li>
                                                 <li>1 number</li>
-                                                <li>1 of these special characters: [!,#$%?:.]</li>
+                                                <li>1 of these special characters: !,#$%?:.</li>
                                             </ul>
-                                        </p:overlayPanel>
+                                       </p:overlayPanel>
 
                                     </div>
                                 </div>
