--- a/ltam/modules/web/src/main/webapp/approved.xhtml
+++ b/ltam/modules/web/src/main/webapp/approved.xhtml
@@ -7,7 +7,6 @@
 
     <ui:define name="content">
         <div id="layout-portlets-cover">
-        <div id="layout-portlets-cover">
             <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter BlueModena">
                 <div class="Container100 Fnone MarAuto TexAlLeft">
                     <div class="Container100 TexAlCenter">
@@ -15,27 +14,29 @@
                                         styleClass="Fleft" library="invessence"
                                         class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                     </div>
-                    <div class="EmptyBox20"></div>
-                    <div class="Container90">
-                        <h1>You are approved..</h1>
-                    </div>
-                    <div class="EmptyBox20"></div>
-                    <h:form>
-                        <div class="Container90">
-                            <p>
-                                You may click on login button to access your account.
-                            </p>
-
-                            <p>
-                                or return to home page.
-                            </p>
-                        </div>
+                    <div class="ContainerIndent">
                         <div class="EmptyBox20"></div>
-                        <p:button value="Login" styleClass="Fs16 BlueButton" href="/login.xhtml"></p:button>
-                        <p:button value="Home" styleClass="Fs16 OrangeButton" href="${apache.url}"></p:button>
+                        <h:form>
+                            <div class="Container100 TexAlCenter">
+                                <h1>You are approved..</h1>
+
+                                <div class="EmptyBox20"></div>
+                                <p>
+                                    You may click on login button to access your account.
+                                </p>
+
+                                <p>
+                                    or return to home page.
+                                </p>
+
+                                <div class="EmptyBox20"></div>
+                                <p:button value="Login" styleClass="Fs16 BlueButton Fleft" href="/login.xhtml"></p:button>
+                                <p:button value="Home" styleClass="Fs16 OrangeButton Fright" href="/index.xhtml"></p:button>
+                            </div>
+                        </h:form>
 
                         <div class="EmptyBox50"></div>
-                    </h:form>
+                    </div>
                 </div>
             </div>
         </div>
