--- a/ltam/modules/web/src/main/webapp/html/ltamaboutus.xhtml
+++ b/ltam/modules/web/src/main/webapp/html/ltamaboutus.xhtml
@@ -6,15 +6,23 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="layout-portlets-box">
-        <div class="Container100 Responsive50 TextAlCenter">
-            Symbil is an automated investment advisor that recommends and places an investor into a
-            risk-appropriate managed portfolio.
-
-            Symbil is a product of Ladenburg Thalmann Asset Management.  We are an SEC Registered
-            Investment Advisory firm established in 1982. We have over $2 billion in assets under management
-            and a dedicated staff of professionals with over 100 years of investment management experience.
-
-            To learn more about us, please visit: <a href="http://www.ltam.com" target="_ltam">http://www.ltam.com</a>
+        <div class="Container100 TextAlCenter">
+            <p>
+                Symbil is a dynamic online investment adviser platform that assists clients in
+                determining their current risk tolerance and investment objective and appropriate
+                asset allocation and, based on that, recommends risk-appropriate Ladenburg Fund.
+            </p>
+            <br/>
+            <p>
+                Symbil is a product of Ladenburg Thalmann Asset Management (“LTAM”),
+                an SEC Registered Investment Advisory firm established in 1982.
+                We have over $2 billion in assets under management and a dedicated staff of
+                professionals with over 100 years of combined investment management experience.
+            </p>
+            <br/>
+            <p>
+                To learn more about us, please visit: <a href="http://www.ltam.com" target="_ltam">http://www.ltam.com</a>
+            </p>
         </div>
     </div>
 
