--- a/ltam/modules/web/src/main/webapp/login.xhtml
+++ b/ltam/modules/web/src/main/webapp/login.xhtml
@@ -8,21 +8,21 @@
 <f:metadata>
     <f:viewParam name="cid" value="#{uiLayout.cid}"/>
     <f:event type="preRenderView" listener="#{uiLayout.preRenderView}"/>
+    <f:event type="preRenderView" listener="#{loginController.updateMessages}"/>
 </f:metadata>
 
 <ui:define name="content">
 
     <div id="layout-portlets-cover">
-        <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-             style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+        <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop5"
+             style="background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
             <div class="Container90 Fnone MarAuto TexAlCenter">
                 <h:form id="logonForm" prependId="false">
                     <div class="EmptyBox50"></div>
                     <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}" styleClass="Fleft" library="invessence"
                                     class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                     <div class="EmptyBox20"></div>
-                    <p:messages id="messages" autoUpdate="true"/>
-                    <f:event listener="#{loginController.updateMessages}" type="preRenderView"/>
+                    <p:messages id="messages" closable="true"/>
                     <p:inputText id="j_username" placeholder="Username" styleClass="Container80 Fnone MarAuto Fs18"
                                  required="true"
                                  requiredMessage="Please enter UserID."
@@ -47,7 +47,10 @@
                     <div class="EmptyBox20"></div>
                     <h:commandButton styleClass="Fs16"
                                      type="submit" id="login" image="images/login.png"
-                                     action="#{loginController.doLogin}"/>
+                                     action="#{loginController.doLogin}"
+                                     update="messages"/>
+                    <div class="EmptyBox20"></div>
+                    <p:button value="Forgot Password?" styleClass="Fs16 RedButton" href="/forgot.xhtml"></p:button>
                     <div class="EmptyBox50"></div>
                 </h:form>
             </div>
