--- a/ltam/modules/web/src/main/webapp/message.xhtml
+++ b/ltam/modules/web/src/main/webapp/message.xhtml
@@ -16,37 +16,39 @@
         <h:form>
 
             <div id="layout-portlets-cover">
-                <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                     style="margin-top:5%;">
-                    <div class="Container90 Fnone MarAuto TexAlCenter">
-                        <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
-                                        styleClass="Fleft" library="invessence"
-                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
+                <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray">
+                    <div class="ContainerIndent">
+                        <div class="Container100 Fnone MarAuto TexAlCenter">
+                            <div class="EmptyBox50"></div>
+                            <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                                            styleClass="Fleft" library="invessence"
+                                            class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
 
-                        <div class="EmptyBox20"></div>
-                        <div class="Container90">
-                            <h1>
+                            <div class="EmptyBox20"></div>
+                            <div class="Container90">
+                                <h1>
                             <span style="#{messageBean.titleColor}">
                             #{messageBean.title}
                             </span>
-                            </h1>
-                        </div>
-                        <div class="EmptyBox20"></div>
+                                </h1>
+                            </div>
+                            <div class="EmptyBox20"></div>
 
-                        <div class="Container90 TexAlLeft">
-                            <h:outputText value="#{messageBean.message}" escape="false"/>
+                            <div class="Container90 TexAlLeft">
+                                <h:outputText value="#{messageBean.message}" escape="false"/>
+                            </div>
+                            <div class="EmptyBox20"></div>
+                            <div class="Container90 TexAlLeft">
+                                <h:outputText value="#{messageBean.supportInfo}" escape="false"/>
+                            </div>
                         </div>
-                        <div class="EmptyBox20"></div>
-                        <div class="Container90 TexAlLeft">
-                            <h:outputText value="#{messageBean.supportInfo}" escape="false"/>
+                        <div class="Container100 TexAlCenter">
+                            <p:commandButton value="OK"
+                                             actionListener="#{uiLayout.goToStartPage}"/>
                         </div>
+
                     </div>
-                    <div class="Container90 TexAlCenter">
-                        <p:commandButton value="OK"
-                                         actionListener="#{uiLayout.goToStartPage}"/>
-                    </div>
-                    <div class="EmptyBox20"></div>
+                   <div class="EmptyBox20"></div>
                 </div>
             </div>
         </h:form>
