--- a/ltam/modules/web/src/main/webapp/approved.xhtml
+++ b/ltam/modules/web/src/main/webapp/approved.xhtml
@@ -18,7 +18,7 @@
                         <div class="EmptyBox20"></div>
                         <h:form>
                             <div class="Container100 TexAlCenter">
-                                <h1>You are approved..</h1>
+                                <h1>Password reset, successfully.</h1>
 
                                 <div class="EmptyBox20"></div>
                                 <p>
