--- a/ltam/modules/web/src/main/webapp/pages/try/review.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/review.xhtml
@@ -245,6 +245,8 @@
                         <ui:fragment rendered="#{ltamprofile.reviewPage}">
                             <h:outputText value="#{uiLayout.getPageInfo(ltamprofile.pagemanager.page)}" escape="false"/>
                         </ui:fragment>
+                        <div class="EmptyBox10"></div>
+                        <h:outputText value="#{uiLayout.disclaimer}" escape="false"/>
                     </div>
                 </div>
             </div>
