--- a/ltam/modules/web/src/main/webapp/reset.xhtml
+++ b/ltam/modules/web/src/main/webapp/reset.xhtml
@@ -38,7 +38,8 @@
                             <div class="EmptyBox10"></div>
                             <div class="Container100">
                                 <div class="ContainerIndent">
-                                    <p:inputText id="userid" styleClass="Container60 Fleft MarAuto Fs18"
+                                    <p:inputText id="userid" readonly="true"
+                                                 styleClass="Container60 Fleft MarAuto Fs18"
                                                  value="#{userBean.beanUserID}" placeholder="User ID"
                                                  required="true" requiredMessage="User ID is requiired.">
                                     </p:inputText>
