--- a/ltam/modules/web/src/main/webapp/static/faq.xhtml
+++ b/ltam/modules/web/src/main/webapp/static/faq.xhtml
@@ -12,114 +12,166 @@
             <div class="Container100" style="background: #ffffff">
                 <div class="ContainerIndent">
                     <p:fieldset legend="What is Symbil"
+                                styleClass="layout-portlets-box"
                                 toggleable="true" toggleSpeed="500" collapsed="true">
                         <p>
-                            Symbil
-                            is an automated investment advisor that recommends and places an investor into
-                            a risk-appropriate managed portfolio.
-                        </p>
-                    </p:fieldset>
-
-                    <p:fieldset legend="Who is making these recommendations?"
-                                toggleable="true" toggleSpeed="500" collapsed="true">
-                        <p>
-                            Symbil
-                            is a product of Ladenburg Thalmann Asset Management. We are an SEC Registered Investment
-                            Advisory firm established in 1982. We have over $2 billion in assets under management and a dedicated staff
-                            of professionals with over 100 years of investment management experience. To
-                            learn more about us, please visit <a href="http://www.ltam.com">http://www.ltam.com</a>
-                        </p>
-
-                    </p:fieldset>
-
-                    <p:fieldset legend="What are these portfolios you place investors in through Symbil?"
-                                toggleable="true" toggleSpeed="500" collapsed="true">
-                        <p>
-                            We have 5 core actively managed portfolios ranging from conservative to aggressive that we will
-                            recommend based on your answers to some key questions that allow us to gauge the right portfolio for you.
-                            These portfolios take the shape in the form of a mutual fund to make the sign-up process as simple as
-                            possible – but each portfolio is comprised of a range of securities from stocks to bonds. The allocation
-                            differs based on your risk profile and the selected portfolio.
-                        </p>
-                    </p:fieldset>
-
-                    <p:fieldset legend="What types of securities do you use? Do you buy direct stocks, ETFs, mutual funds? What’s in these portfolios?"
-                                toggleable="true" toggleSpeed="500" collapsed="true">
-                        <p>
-                            Each of the 5 Symbil portfolios invest in a combination of equity, fixed income and alternative strategy
-                            exchange traded funds (“ETFs”) to build globally diversified asset allocations which are tactically
-                            managed by Ladenburg Thalmann Asset Management (“LTAM”).
-                        </p>
-                    </p:fieldset>
-
-                    <p:fieldset legend="What about things like rebalancing? What does that mean? Do you do that?"
-                                toggleable="true" toggleSpeed="500" collapsed="true">
-                        <p>
-                            We rebalance our strategies according to current market conditions, but never steer away from our original
-                            foundation that accounts for the combination of risk and time.
+                            Symbil is a dynamic online investment adviser platform that assesses the risk profile of an investor and recommends a risk-appropriate managed Ladenburg Fund.
                         </p>
                     </p:fieldset>
 
                     <p:fieldset legend="Is this a “robo-advisor” like I’ve heard about?"
+                                styleClass="layout-portlets-box"
                                 toggleable="true" toggleSpeed="500" collapsed="true">
                         <p>
-                            The Symbil platform is an electronic “robo advisor” program whereby investors can access through a
-                            website an online tool that guides them through a quick questionnaire and suggests an investment in
-                            one of the 5 LAMP ETF mutual funds. You get the benefit of top investment professionals actively
-                            managing and updating your portfolio from the moment you enroll. A robot isn’t managing your portfolio
-                            but the investment professionals of Ladenburg Thalmann Asset Management are.
+                            The Symbil platform is an electronic “robo advisor” program whereby investors can access an online
+                            tool that guides them through a quick questionnaire and suggests an investment in one of the 5
+                            Ladenburg mutual funds. You receive the benefit of investment professionals who actively manage
+                            your Fund once you make the purchase of the Fund.  Symbil utilizes the trusted investment
+                            professionals of Ladenburg Thalmann Asset Management to manage your Fund, not an actual robot.            </p>
+
+                    </p:fieldset>
+
+                    <p:fieldset legend="Who is managing my investments through Symbil??"
+                                styleClass="layout-portlets-box"
+                                toggleable="true" toggleSpeed="500" collapsed="true">
+                        <p>
+
+                            Symbil is provided by Ladenburg Thalmann Asset Management.
+                            LTAM’s an SEC Registered Investment Advisory firm established in 1982.
+                            LTAM has over $2 billion in assets under management and a dedicated staff of
+                            professionals with over 100 years of investment management experience.
+                            To learn more about us, please visit <a href="http://www.ltam.com">http://www.ltam.com</a>
                         </p>
                     </p:fieldset>
 
-                    <p:fieldset legend="What do you charge? What types of fees can I expect?"
+                    <p:fieldset legend="My advisor recommended I use this – how is he/she involved?"
+                                styleClass="layout-portlets-box"
                                 toggleable="true" toggleSpeed="500" collapsed="true">
                         <p>
-                            There are no fees for going through the process and receiving the advice of the recommended portfolio.
-                            Once enrolled, there are certain initial expenses that are part of the mutual funds we use, but we strive
-                            to find the best balance of low-cost and performance. As a firm we charge 50% fee of assets under
-                            management for the active portfolio management within the funds. We believe that our portfolios balance
-                            cost-effectiveness and performance with access to top investment management professionals.
+                            Ladenburg Thalmann Asset Management has long been a trusted source of asset
+                            management for the clients of thousands of independent financial advisors.
+                            Symbil is a simple way for advisors to provide a solution to clients through a
+                            short interactive online process.  Your advisor who is a registered representative
+                            of an Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and the Affiliate
+                            may receive a referral fee for referring you to the Symbil Website.
+                        </p>
+                    </p:fieldset>
+
+                    <p:fieldset legend="What are the investments being recommended through Symbil?"
+                                styleClass="layout-portlets-box"
+                                toggleable="true" toggleSpeed="500" collapsed="true">
+                        <p>
+                            Through Symbil you gain access to the Ladenburg Funds, 5 mutual funds actively
+                            managed by Ladenburg Thalmann Asset Management with risk profiles ranging from
+                            conservative to aggressive. The funds each offer a complete and globally diversified
+                            asset allocation with exposure to a range of asset classes including equities,
+                            fixed income and alternative investments.  The particular fund that is recommended
+                            to you is determined by the answers you provide in the Symbil online questionnaire
+                            and is based on your goals, objectives and risk profile. For more information on the
+                            funds go to <a href="http://www.ladenburgfunds.com">http://www.ladenburgfunds.com</a>
+                        </p>
+                    </p:fieldset>
+
+                    <p:fieldset legend="How many investments will I see in my Symbil account?"
+                                styleClass="layout-portlets-box"
+                                toggleable="true" toggleSpeed="500" collapsed="true">
+                        <p>
+                            Your account will be invested in 1 of the 5 Ladenburg mutual funds so
+                            you will only see 1 investment in your account.  However, through this
+                            single mutual fund, you’ll receive a complete asset allocation through the
+                            fund’s underlying investments in equity, fixed income and alternative investment
+                            exchange traded funds (ETFs).
+                        </p>
+                    </p:fieldset>
+
+                    <p:fieldset
+                            legend="Will the asset allocations ever change in the fund I’m invested in? What about things like rebalancing? What does that mean? Do you do that?"
+                            styleClass="layout-portlets-box"
+                            toggleable="true" toggleSpeed="500" collapsed="true">
+                        <p>
+                            The asset allocations in your portfolio will periodically change for tactical purposes.
+                            The underlying foundation of our investment philosophy is the construction of a globally
+                            diversified portfolio based on strategic asset allocation. Strategic asset allocation is
+                            a strategy that divides up a portfolio among major asset classes (equities, bonds, cash
+                            equivalents, and alternative investment vehicles) in proportions that are consistent with
+                            an investor's long-term financial goals and objectives, establishing a "base policy mix".
+                            This mix of assets is based on expected rates of return and risk for each asset class.
+                            The tactical overlay essentially helps us determine which areas to under or over-weight
+                            based on market conditions. We will recommend a portfolio change where we can either
+                            reduce the risk in the portfolio or potentially add a higher rate of return, given a
+                            certain level of risk. In general, tactical changes tend to occur 2-6 times per year
+                            and are based on current market conditions.  Any changes that we make we will rebalance
+                            our Funds according to current market conditions, but maintain our original foundation
+                            that accounts for the combination of risk and time.
+                        </p>
+                    </p:fieldset>
+
+                    <p:fieldset legend="Who can open an account through Symbil?"
+                                styleClass="layout-portlets-box"
+                                toggleable="true" toggleSpeed="500" collapsed="true">
+                        <p>
+                            Anyone who is 18 years old or older, holds a permanent U.S. address and
+                            is a legal U.S. resident or U.S. citizen.
+                        </p>
+
+
+                    </p:fieldset>
+
+                    <p:fieldset legend="Is there a minimum amount required to invest?"
+                                styleClass="layout-portlets-box"
+                                toggleable="true" toggleSpeed="500" collapsed="true">
+                        <p>
+                            Through Symbil, the minimum investment in the Ladenburg Funds is $500 as an
+                            initial investment.
                         </p>
                     </p:fieldset>
 
                     <p:fieldset legend="What types of accounts does Symbil support?"
+                                styleClass="layout-portlets-box"
                                 toggleable="true" toggleSpeed="500" collapsed="true">
                         <p>
                             Symbil currently supports Individual, Joint, Traditional IRA and Roth IRA accounts.
                         </p>
                     </p:fieldset>
 
-                    <p:fieldset legend="Who can open an account through Symbil?"
+                    <p:fieldset legend="What do you charge? What types of fees can I expect?"
+                                styleClass="layout-portlets-box"
                                 toggleable="true" toggleSpeed="500" collapsed="true">
                         <p>
-                            Anyone who is 18 years old or older, holds a permanent U.S. address and is a legal U.S. resident or U.S.
-                            citizen.
+                            There is no fee for Symbil through the process to determine the advice of the
+                            recommended fund.  Once you decide to purchase the fund, there are certain
+                            expenses and fees that are internal to the Ladenburg mutual funds.  LTAM, as the
+                            manager of the Funds, receives 0.50% annually, on the assets managed in the Ladenburg
+                            Funds for their active portfolio management within the Funds.  This fee and certain
+                            other expenses mentioned above are taken from the fund before any performance is
+                            reported. We believe that our portfolios balance cost-effectiveness and performance
+                            with access to top investment management professionals.  For information about all
+                            the fees and expenses associated with the Ladenburg Funds, please refer to
+                            the <a href="http://www.ladenburgfunds.com/docs/prospectus.pdf">Funds’
+                            prospectus</a>, which can be obtained at no cost by calling 1-877-803-6583 or by
+                            visiting <a href="http://www.ladenburgfunds.com">http://www.ladenburgfunds.com</a>
                         </p>
                     </p:fieldset>
 
-                    <p:fieldset legend="Is there a minimum amount required to invest?"
+                    <p:fieldset legend="Is there an option for an Automatic Investment Plan?"
+                                styleClass="layout-portlets-box"
                                 toggleable="true" toggleSpeed="500" collapsed="true">
                         <p>
-                            The minimum investment for Symbil is $500.
+                            Yes, the Funds have an automatic investment plan which allows you to make
+                            automatic monthly or quarterly investments in your account through a withdrawal
+                            from the bank account that you provide on the account application form. The
+                            minimum for the automatic investment plan is $50.
                         </p>
                     </p:fieldset>
 
-                    <p:fieldset legend="My advisor recommended I use this – how does that work?"
+                    <p:fieldset legend="What is the next step after creating an account?"
+                                styleClass="layout-portlets-box"
                                 toggleable="true" toggleSpeed="500" collapsed="true">
                         <p>
-                            Ladenburg Thalmann Asset Management has long been a trusted source of asset management for the clients of
-                            thousands of independent financial advisors. Symbil is a simple way for advisors to encourage clients to
-                            enroll through a short online process. When you leave the advisors website who is a registered
-                            representative of an Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) you will enter LTAM’s
-                            Symbil Website. Your advisor will receive a referral fee for reffering you to the Symbil Website.
-                        </p>
-                    </p:fieldset>
-
-                    <p:fieldset legend="Once I enroll, then what?"
-                                toggleable="true" toggleSpeed="500" collapsed="true">
-                        <p>
-                            You will be referred to an online investor portal held at our partners at The Gemini Companies. From that
-                            portal you will be able to review the account’s performance, make updates or changes, and add more funds at
+                            You will be referred to an online investor portal held at our partners at
+                            Gemini Fund Company, who are the Fund Administrators and Shareholder Services
+                            for the Ladenburg Funds. From their secure portal you will be able to review
+                            your account’s performance, make updates or changes, and add more funds at
                             your discretion.
                         </p>
                     </p:fieldset>
@@ -128,12 +180,20 @@
             </div>
 
         </div>
-        <div class="Container100 Responsive50 TextAlCenter">
 
-
-
-
-        </div>
+        <p:outputPanel id="disclaimer" style="border: 0px; background: transparent">
+            <div class="layout-portlets-box">
+                <div class="Container100 Responsive100">
+                    <div class="Container100">
+                        <div class="ContainerIndent">
+                            <div class="Fs12 TexAlCenter">
+                                <h:outputText value="#{uiLayout.disclaimer}" escape="false"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </p:outputPanel>
 
     </ui:define>
 
