--- a/ltam/modules/web/src/main/webapp/start.xhtml
+++ b/ltam/modules/web/src/main/webapp/start.xhtml
@@ -33,6 +33,7 @@
                         See what LTAM has to offer by answering a few short questions
                         to help us build you a risk managed portfolio customized to your
                         financial needs.
+                        <div class="EmptyBox20"></div>
                         <div class="Fs8 TexAlCenter">
                             You are leaving the website of individual(s) who are registered representatives of an
                             Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and have entered LTAM's
