--- a/ltam/modules/web/src/main/webapp/static/faq.xhtml
+++ b/ltam/modules/web/src/main/webapp/static/faq.xhtml
@@ -147,7 +147,7 @@
                             reported. We believe that our portfolios balance cost-effectiveness and performance
                             with access to top investment management professionals.  For information about all
                             the fees and expenses associated with the Ladenburg Funds, please refer to
-                            the <a href="http://www.ladenburgfunds.com/docs/prospectus.pdf">Funds’
+                            the <a href="http://www.ladenburgfunds.com/docs/Prospectus.pdf">Funds’
                             prospectus</a>, which can be obtained at no cost by calling 1-877-803-6583 or by
                             visiting <a href="http://www.ladenburgfunds.com">http://www.ladenburgfunds.com</a>
                         </p>
