--- a/ltam/modules/web/src/main/webapp/pages/advisor/alist.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/advisor/alist.xhtml
@@ -37,38 +37,39 @@
 
                         <div class="Container100">
                             <p:dataTable id="managedDataList" var="managedVar" widgetVar="managedTable"
-                                         value="#{manageAdvisorBean.consumerData}">
+                                         value="#{manageAdvisorBean.consumerData}"
+                                         reflow="true">
 
 
                                 <p:column sortBy="#{managedVar.fullname}"
                                           headerText="Name"
-                                          style="width:20%; text-align: left"
+                                          style="text-align: left"
                                           resizable="true">
                                     <h:outputText value="#{managedVar.fullname}"/>
                                 </p:column>
                                 <p:column sortBy="#{managedVar.displayAccount}"
                                           headerText="Acct#"
-                                          style="width:20%; text-align: left"
+                                          style="text-align: left"
                                           resizable="true">
                                     <h:outputText value="#{managedVar.displayAccount}"/>
                                 </p:column>
 
                                 <p:column sortBy="#{managedVar.description}"
                                           headerText="Security"
-                                          style="width:20%; text-align: left"
+                                          style="text-align: left"
                                           resizable="true">
                                     <h:outputText value="#{managedVar.description}"/>
                                 </p:column>
                                 <p:column sortBy="#{managedVar.dateOpened}"
                                           headerText="Opened"
-                                          style="width:10%; text-align: right"
+                                          style="text-align: center"
                                           resizable="true">
                                     <h:outputText value="#{managedVar.dateOpened}">
                                     </h:outputText>
                                 </p:column>
                                 <p:column sortBy="#{managedVar.investment}"
                                           headerText="Amount"
-                                          style="width:15%; text-align: right"
+                                          styleClass="dataTableRight"
                                           resizable="true">
                                     <h:outputText value="#{managedVar.investment}">
                                         <f:convertNumber currencySymbol="$" type="currency"/>
