Smartphone & tablet UI/UX integration

--- a/ltam/modules/web/src/main/webapp/pages/try/addon/final.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/addon/final.xhtml
@@ -7,24 +7,24 @@
 
     <div class="Container100 Responsive50 TextAlCenter">
         <div class="TexAlCenter">
-            <h1>#{ltamprofile.firstname}, based on your answers, your recommended objective is:</h1>
+            <h1 class="black Fs24 fnt1">#{ltamprofile.firstname}, based on your answers, your recommended objective is:</h1>
         </div>
-        <div class="EmptyBox20"></div>
+        
         <table class="Container100 Responsive100 TextAlCenter">
             <tr>
                 <td colspan="2" class="TexAlCenter">
-                    <div class="DispInlBlock TexAlLeft MarTop20">
+                    <div class="DispInlBlock TexAlLeft tp1">
                         <div class="Fright">
-                            <h2 class="black Fs24">#{ltamprofile.themeData.displayname}</h2>
+                            <h1 class="black Fs24 fnt1">#{ltamprofile.themeData.displayname}</h1>
                         </div>
                     </div>
                 </td>
             </tr>
             <tr>
                 <td colspan="2" class="TexAlCenter">
-                    <div class="DispInlBlock TexAlLeft MarTop20">
+                    <div class="DispInlBlock TexAlLeft tp1">
                         <div class="Fright">
-                            <h2 class="black Fs18">#{ltamprofile.themeData.longDescription}</h2>
+                            <h2 class="black f1">#{ltamprofile.themeData.longDescription}</h2>
                         </div>
                     </div>
                 </td>
@@ -33,7 +33,7 @@
                 <td>
                     <p:chart type="pie" model="#{ltamprofile.ltamcharts.pieChart}"
                              rendered="#{ltamprofile.ltamcharts.pieChart != null}"
-                             style="width:100%;height:190px;"
+                             style="width:100%;height:210px;"
                              responsive="true">
                     </p:chart>
                 </td>
